Adicionado letra faltante na palavra "tornar"

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ function eventHandler(ev) {
         <ul>
             <li>Aplicativos web complexos começam a surgir (ajax, HTML5, etc)</li>
             <li>Os browsers começam a oferecer mais consistência</li>
-            <li>Bibliotecas como o jQuery começam a torar fácil o desenvolvimento em Javascript</li>
+            <li>Bibliotecas como o jQuery começam a tornar fácil o desenvolvimento em Javascript</li>
             <li>A linguagem não se limitou apenas ao browser (Node.js, Rhino, Appcelerator)</li>
         </ul>
     </section>
